# Device-management-with-Arduino-Uno

./: .gitignore  README.md  START.bat  START.sh
docs/: PROJECT.md  PROTOCOL.md  WIRING.md
firmware/multi_channel_driver/: multi_channel_driver.ino
python/: arduino_client.py  demo_show.py  gui_common.py  gui_light.py  gui_modern.py  gui_present.py  present_access.py  pyproject.toml  requirements-gui-modern.txt  requirements.txt  serial_controller.py  sim_backend.py
scripts/: bootstrap.ps1  bootstrap.sh
