[project]
name = "device-management-arduino"
version = "0.1.0"
description = "Управление выходными каналами CH1–CH8: Arduino UNO + ULN2803A, Python GUI/CLI"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
modern = [
    "customtkinter>=5.2.0",
]

[dependency-groups]
modern = [
    "customtkinter>=5.2.0",
]

[tool.uv]
package = false
